[gd_scene load_steps=10 format=3 uid="uid://de7i52km74qu4"]

[ext_resource type="Texture2D" uid="uid://crhxbghmf1rt4" path="res://Graphics/Pictures/Party/panel_rect.png" id="1_4qger"]
[ext_resource type="Script" path="res://Scripts/UI/PartySlot.gd" id="2_yxf2j"]
[ext_resource type="Texture2D" uid="uid://dwwt34ivwd7ts" path="res://Graphics/Pictures/Party/icon_ball.png" id="3_nlrb8"]
[ext_resource type="LabelSettings" uid="uid://drvfbtc34k8bq" path="res://Scenes/UI/Hud/party_text.tres" id="3_q77xs"]
[ext_resource type="Texture2D" uid="uid://vhmr3logh7h" path="res://Graphics/Pokemon/Icons/000.png" id="4_kikca"]
[ext_resource type="Texture2D" uid="uid://bmtbtn2vtrxje" path="res://Graphics/Pictures/Party/overlay_hp_back.png" id="5_re0v5"]
[ext_resource type="Texture2D" uid="uid://d0t6iegd38k1s" path="res://Graphics/Pictures/Party/overlay_hp.png" id="6_sesi4"]
[ext_resource type="Texture2D" uid="uid://c5geepfc2o8bg" path="res://Graphics/Pictures/Party/overlay_lv.png" id="7_up487"]
[ext_resource type="Texture2D" uid="uid://6fg77q51bpq7" path="res://Graphics/Pictures/Party/overlay_gender.png" id="8_p62sp"]

[node name="PartySlot" type="Sprite2D"]
texture = ExtResource("1_4qger")
script = ExtResource("2_yxf2j")

[node name="NameLabel" type="Label" parent="."]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.42188
anchor_bottom = 0.591837
offset_left = -285.0
offset_top = -77.0
offset_right = -280.219
offset_bottom = -54.2857
text = "Pokemon"
label_settings = ExtResource("3_q77xs")
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="IconBall" type="Sprite2D" parent="."]
position = Vector2(-122, -51)
texture = ExtResource("3_nlrb8")
centered = false

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(-103, -46)
texture = ExtResource("4_kikca")
centered = false
hframes = 2

[node name="HpBarBack" type="Sprite2D" parent="."]
position = Vector2(-32, 1)
texture = ExtResource("5_re0v5")
centered = false

[node name="HpLabel" type="Label" parent="HpBarBack"]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.45652
anchor_bottom = 1.14286
offset_left = -67.0
offset_top = 5.0
offset_right = -66.9998
offset_bottom = 20.0
text = "999/999"
label_settings = ExtResource("3_q77xs")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HpBar" type="Sprite2D" parent="HpBarBack"]
position = Vector2(32, 2)
scale = Vector2(96, 1)
texture = ExtResource("6_sesi4")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 1, 8)

[node name="Level" type="Sprite2D" parent="."]
position = Vector2(-109, 22)
texture = ExtResource("7_up487")
centered = false

[node name="LevelLabel" type="Label" parent="Level"]
z_index = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 2.22727
anchor_bottom = 1.14286
offset_left = 2.0
offset_top = -16.0
offset_right = 2.0
offset_bottom = -1.0
text = "100"
label_settings = ExtResource("3_q77xs")
vertical_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="GenderSymbol" type="Sprite2D" parent="."]
position = Vector2(94, -27)
texture = ExtResource("8_p62sp")
centered = false
hframes = 2
